<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usernameTextViewId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"
        android:inputType="text"
    />
    <EditText
    android:id="@+id/passwordTextViewId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword"
    />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:onClick="handleLoginButton"
        />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleSignUpText"
        android:text="@string/go_to_sign_up_page_text"
        />

</LinearLayout>